<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_gan"
        android:icon="@drawable/ic_gan"
        android:iconTint="#8C5858"
        android:title="@string/truyen_nhiem"
        app:showAsAction="always" />


    <item
        android:id="@+id/ic_noi_tiet"
        android:icon="@drawable/ic_noi_tiet"
        android:iconTint="#8C5858"
        android:title="@string/noi_tiet"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_than"
        android:icon="@drawable/ic_than"
        android:iconTint="#8C5858"
        android:title="@string/than"
        app:showAsAction="always" />
    <item
        android:id="@+id/ic_tieu_hoa"
        android:icon="@drawable/ic_long"
        android:iconTint="#8C5858"
        android:title="@string/tieu_hoa"
        app:showAsAction="always" />
    <item
        android:id="@+id/ic_xuong_khop"
        android:icon="@drawable/ic_xuong_khop"
        android:iconTint="#8C5858"
        android:title="@string/co_xuong_khop"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_ho_hap"
        android:icon="@drawable/ic_phoi"
        android:iconTint="#8C5858"
        android:title="@string/ho_hap"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_tai_mui_hong"
        android:icon="@drawable/ic_tai_mui_hong"
        android:iconTint="#8C5858"
        android:title="@string/tai_mui_hong"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_rang_ham_mat"
        android:icon="@drawable/ic_rang"
        android:iconTint="#8C5858"
        android:title="@string/rang_ham_mat"
        app:showAsAction="always" />
    <group android:enabled="false"
        android:id="@+id/asd" android:checkableBehavior="none">
        <item
            android:id="@+id/ic_ngoai_khoa"
            android:icon="@drawable/ic_ngoai_khoa"
            android:iconTint="#8C5858"
            android:title="@string/ngoai_khoa"
            app:showAsAction="always" />
    </group>

</menu>