<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="25dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_specialty_or_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/truyen_nhiem"
            android:textColor="@color/text_black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="17dp"
            android:fontFamily="@font/roboto_italic"
            android:text="6 ngày trước"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_doctor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Bsi. AAAA"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintEnd_toStartOf="@+id/img_doctor"
            app:layout_constraintStart_toStartOf="@+id/tv_specialty_or_services"
            app:layout_constraintTop_toBottomOf="@+id/tv_specialty_or_services" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Thạc sỹ"
            android:textSize="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/img_doctor"
            app:layout_constraintStart_toStartOf="@+id/tv_name_doctor"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_doctor" />

        <ImageView
            android:id="@+id/img_doctor"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imb_more"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginTop="31dp"
            android:background="#DDFFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                android:id="@+id/tv_kqxn_mau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:drawableStart="@drawable/ic_ket_qua_mau"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/kqxn_mau"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:drawableStart="@drawable/icon_image"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/anh"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="17dp"
                android:drawableStart="@drawable/icon_file"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/file"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imb_more"
            android:layout_width="18dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/corrner_icon_lskb"
            android:src="@drawable/double_arrow_left"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>