<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradien_bg_home"
            android:paddingBottom="@dimen/margin_30_dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_avatar"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="37dp"
                android:scaleType="fitXY"
                android:background="@drawable/border_oval_avatar"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="#FFBB00"
                app:strokeWidth="1dp" />


            <TextView
                android:id="@+id/txv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="58dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Nguyễn Thu Hương"
                android:textColor="@color/md_white_1000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txv_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_text_notifi"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/md_white_1000"
                app:layout_constraintBottom_toBottomOf="@+id/img_notify"
                app:layout_constraintEnd_toEndOf="@+id/img_notify"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="19dp"
                android:src="@drawable/ic_notify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txv_ho_so_kham_benh"
                android:layout_width="160dp"
                android:layout_height="184dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_btn_ho_so"
                android:drawableTop="@drawable/ic_ho_so"
                android:drawablePadding="17dp"
                android:fontFamily="@font/roboto_medium"
                android:minHeight="160dp"
                android:paddingTop="34dp"
                android:paddingBottom="41dp"
                android:text="@string/text_home1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/txv_lien_he_bac_si"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

            <TextView
                android:id="@+id/txv_lien_he_bac_si"
                android:layout_width="160dp"
                android:layout_height="184dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_btn_lien_he_bac_si"
                android:drawableTop="@drawable/ic_kham_benh"
                android:drawablePadding="17dp"
                android:fontFamily="@font/roboto_medium"
                android:maxHeight="184dp"
                android:maxLines="2"
                android:minHeight="160dp"
                android:paddingHorizontal="16dp"
                android:paddingTop="34dp"
                android:paddingBottom="18dp"
                android:text="@string/text_home2"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_kham_benh"
                app:iconGravity="textTop"
                app:iconPadding="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txv_ho_so_kham_benh"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

            <TextView
                android:id="@+id/txv_ket_qua_xet_nghiem"
                android:layout_width="160dp"
                android:layout_height="184dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_btn_cap_nhap_ket_qua"
                android:drawablePadding="17dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:minHeight="160dp"
                android:paddingTop="34dp"
                android:paddingBottom="17dp"
                android:text="@string/text_home3"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:drawableTopCompat="@drawable/ic_ket_qua"
                app:iconGravity="textTop"
                app:iconPadding="17dp"
                app:layout_constraintEnd_toStartOf="@+id/txv_dat_lich_kham"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txv_ho_so_kham_benh" />

            <TextView
                android:id="@+id/txv_dat_lich_kham"
                android:layout_width="160dp"
                android:layout_height="184dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_btn_dat_lich_kham_benh"
                android:drawableTop="@drawable/ic_lich"
                android:drawablePadding="17dp"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="2"
                android:minHeight="160dp"
                android:paddingTop="34dp"
                android:paddingBottom="17dp"
                android:text="@string/text_home4"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_lich"
                app:iconGravity="textTop"
                app:iconPadding="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txv_ket_qua_xet_nghiem"
                app:layout_constraintTop_toBottomOf="@+id/txv_lien_he_bac_si" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="29dp"
            android:id="@+id/container_tab"
            android:paddingBottom="20dp"
            >

            <LinearLayout
                android:id="@+id/ll_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txv_chuyen_khoa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/corner_text_item1"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingTop="17dp"
                    android:paddingBottom="10dp"
                    android:text="@string/home_page1"
                    android:textAlignment="center"
                    android:textColor="@color/text_black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txv_dich_vu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/corner_text_item2"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingTop="17dp"
                    android:paddingBottom="10dp"
                    android:text="@string/home_page2"
                    android:textAlignment="center"
                    android:textColor="@color/text_black"
                    android:textSize="20sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_specialty_or_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_indicator" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/noi_bat"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_slider"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:paddingHorizontal="70dp"
             />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_indicator1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="16dp"
               />

            <ImageView
                android:id="@+id/img_indicator2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="16dp"
                />

            <ImageView
                android:id="@+id/img_indicator3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="16dp"
                 />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>

